Fix header z-index Change carousel navigation

--- a/stylesheets/ml/md-styles.less
+++ b/stylesheets/ml/md-styles.less
@@ -5,7 +5,7 @@
         position: fixed;
         width: 100%;
         top: 0;
-        z-index: 1;
+        z-index: 2010;
         &.sticky-nav {
             .mz-pageheader {
                 height: 5.8rem;
