--- a/stylesheets/ml/misc.less
+++ b/stylesheets/ml/misc.less
@@ -111,7 +111,7 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            z-index: 2;
+            z-index: 2020;
             .logo {
                 display: block;
                 width: 22rem;
@@ -137,7 +137,7 @@
             left: 3rem;
             right: auto;
             font-size: 3rem;
-            z-index: 10;
+            z-index: 2100;
             width: 71%;
 
             #searchbox {
@@ -146,7 +146,7 @@
                     position: absolute;
                     right: -3.2rem;
                     top: 0.3rem;
-                    z-index: 2;
+                    z-index: 2020;
                     cursor: pointer;
                 }
                 .searchbox-button{
@@ -156,7 +156,7 @@
                     height: 4rem;
                     position: absolute;
                     right: 0;
-                    z-index: 15;
+                    z-index: 2150;
                     &:before{
                         font-size: 3rem;
                     }
@@ -167,7 +167,7 @@
                     }
                 }
                 >.form-input{
-                    z-index: 10;
+                    z-index: 2100;
                     float: left;
                     width: 100%;
                     >.twitter-typeahead{
@@ -188,7 +188,7 @@
                     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
                     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
                     box-sizing: border-box;
-                    z-index: 10;
+                    z-index: 2100;
                 }
                 &.hidden-search {
                     width: 0;
@@ -341,7 +341,7 @@
         padding: 0 15px 15px 15px;
         border: 1px solid rgba(0,0,0,0.15);
         background: white;
-        z-index: 2;
+        z-index: 2020;
         border-radius: 3px;
         -webkit-transition: visibility 0s ease-out 0s;
         -moz-transition: visibility 0s ease-out 0s;
@@ -377,7 +377,7 @@
             }
             .arrow-up {
                 display: none;
-                z-index: 3;
+                z-index: 2030;
                 position: absolute;
                 top: 16px;
                 left: 50%;
@@ -436,7 +436,7 @@
         padding: 20px 20px 0 0;
         border: 1px solid rgba(0, 0, 0, 0.15);
         background: white;
-        z-index: 2;
+        z-index: 2020;
         border-radius: 3px;
         &>.mz-sitenav-item {
             padding: 0 20px 10px 0px;
@@ -1901,9 +1901,9 @@ ul.tabs {
                 img,
                 .mz-productlisting-imageplaceholder {
                     max-width: 100%;
-                    max-height: 160px;
+                    max-height: 20rem;
                     >.mz-productlisting-imageplaceholdertext {
-                        line-height: 160px;
+                        line-height: 20rem;
                     }
                 }
                 .img-responsive{
