--- a/stylesheets/ml/sm-styles.less
+++ b/stylesheets/ml/sm-styles.less
@@ -8,7 +8,7 @@
 	.mz-pageheader{
 		.ml-header-content {
 			.ml-header-logo-wrapper{
-				z-index: 4;
+				z-index: 2040;
 				.logo {
 					width:22.5rem;
 				    background-repeat: no-repeat;
@@ -29,7 +29,7 @@
 				right: 11%;
 				left: auto;
 				top: 2.5rem;
-				z-index: 2;
+				z-index: 2020;
 				&:before{
 					position: absolute;
 					left: -3rem;
@@ -78,7 +78,7 @@
 				/*display: block; not implemented yet*/
 				position: absolute;
 				right: -4%;
-				z-index: 20;
+				z-index: 2020;
 				select{
 					width: 4.5rem;
 					background: transparent;
