--- a/stylesheets/modules/product/product-carousel-listing.less
+++ b/stylesheets/modules/product/product-carousel-listing.less
@@ -1,5 +1,6 @@
 ﻿.product-carousel-listing {
-    height: 200px;
+    height: 50rem;
+    padding: 0 1.5625rem;
     .swiper-container{
         height: 100%;
     }
